src/test/ui/typeck/typeck-builtin-bound-type-parameters.stderr
error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:11:16
   |
LL | fn foo1<T:Copy<U>, U>(x: T) {}
   |                ^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:14:19
   |
LL | trait Trait: Copy<Send> {}
   |                   ^^^^ unexpected type argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:17:26
   |
LL | struct MyStruct1<T: Copy<T>>;
   |                          ^ unexpected type argument

error[E0107]: wrong number of lifetime arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:20:30
   |
LL | struct MyStruct2<'a, T: Copy<'a>>;
   |                              ^^ unexpected lifetime argument

error[E0107]: wrong number of lifetime arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:24:20
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |                    ^^ unexpected lifetime argument

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/typeck-builtin-bound-type-parameters.rs:24:24
   |
LL | fn foo2<'a, T:Copy<'a, U>, U>(x: T) {}
   |                        ^ unexpected type argument

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0107`.
